# cognitive-modules

./: .gitignore  AGENTS.md  CONFORMANCE.md  ERROR-CODES.md  OpenCode.md  README.md  README_zh.md  SPEC-v2.5.md  SPEC-v2.5_zh.md  SPEC.md  cog  mkdocs.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml  docs.yml  publish.yml
.opencode/: opencode.db-shm  opencode.db-wal
cognitive/modules/code-reviewer/: MODULE.md
cognitive/modules/code-simplifier/: MODULE.md  module.yaml  prompt.md  schema.json
cognitive/modules/image-analyzer/: MODULE.md  module.yaml  prompt.md  schema.json
cognitive/modules/ui-spec-generator/: MODULE.md  constraints.yaml  input.schema.json  module.md  output.schema.json  prompt.txt  schema.json
docs/: index.md  spec.md
docs-v2/: sidebars.ts
docs-v2/docs/specification/: certification.md  cmep-process.md  composition.md  conformance.md  context-protocol.md  error-codes.md  governance.md  implementers-guide.md  index.md  registry-protocol.md  spec-v22.md  spec-v25.md
docs/getting-started/: installation.md
docs/guide/: subagent.md
docs/integration/: http-api.md  mcp.md
runtime/: llm_stub.py  run_module.py  validate_module.py
site/: 404.html  index.html  sitemap.xml
site/cli/overview/: index.html
site/cli/run/: index.html
site/modules/: index.html
site/search/: search_index.json
site/spec/: index.html
spec/: media-types.schema.json  module.yaml.schema.json  streaming-envelope.schema.json
src/cognitive/: cli.py  loader.py  mcp_server.py  registry.py  runner.py  validator.py
tests/: __init__.py
(+38 files in other folders)
